hphp/hack/test/typecheck/tconst/interface_partially_abstract_tconst.php.exp
File "interface_partially_abstract_tconst.php", line 6, characters 14-14:
An interface cannot contain a partially abstract type constant (NastCheck[3031])
